@@ -1216,23 +1216,23 @@ BEGIN
     RTEXT           "Static",IDC_ZKERNELTIME_V,59,37,61,8,SS_ENDELLIPSIS
     RTEXT           "Static",IDC_ZUSERTIME_V,59,47,61,8,SS_ENDELLIPSIS
     RTEXT           "Static",IDC_ZTOTALTIME_V,59,57,61,8,SS_ENDELLIPSIS
-    GROUPBOX        "Memory",IDC_STATIC,7,74,120,96
+    GROUPBOX        "Memory",IDC_STATIC,7,74,120,128
     LTEXT           "Private Bytes",IDC_STATIC,14,84,44,8
-    LTEXT           "Working Set",IDC_STATIC,14,105,40,8
-    LTEXT           "Peak Working Set",IDC_STATIC,14,115,57,8
-    LTEXT           "Virtual Size",IDC_STATIC,14,125,36,8
-    LTEXT           "Peak Virtual Size",IDC_STATIC,14,135,53,8
+    LTEXT           "Working Set",IDC_STATIC,14,136,40,8
+    LTEXT           "Peak Working Set",IDC_STATIC,14,178,57,8
+    LTEXT           "Virtual Size",IDC_STATIC,14,105,36,8
+    LTEXT           "Peak Virtual Size",IDC_STATIC,14,115,53,8
     LTEXT           "Peak Private Bytes",IDC_STATIC,14,95,61,8
-    LTEXT           "Page Faults",IDC_STATIC,14,145,38,8
-    LTEXT           "Page Priority",IDC_STATIC,14,155,42,8
+    LTEXT           "Page Faults",IDC_STATIC,14,125,38,8
+    LTEXT           "Page Priority",IDC_STATIC,14,188,42,8
     RTEXT           "Static",IDC_ZPRIVATEBYTES_V,72,84,48,8,SS_ENDELLIPSIS
-    RTEXT           "Static",IDC_ZWORKINGSET_V,72,105,48,8,SS_ENDELLIPSIS
-    RTEXT           "Static",IDC_ZPEAKWORKINGSET_V,78,115,42,8,SS_ENDELLIPSIS
-    RTEXT           "Static",IDC_ZVIRTUALSIZE_V,72,125,48,8,SS_ENDELLIPSIS
-    RTEXT           "Static",IDC_ZPEAKVIRTUALSIZE_V,72,135,48,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZWORKINGSET_V,72,136,48,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZPEAKWORKINGSET_V,78,178,42,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZVIRTUALSIZE_V,72,105,48,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZPEAKVIRTUALSIZE_V,72,115,48,8,SS_ENDELLIPSIS
     RTEXT           "Static",IDC_ZPEAKPRIVATEBYTES_V,80,95,40,8,SS_ENDELLIPSIS
-    RTEXT           "Static",IDC_ZPAGEFAULTS_V,72,145,48,8,SS_ENDELLIPSIS
-    RTEXT           "Static",IDC_ZPAGEPRIORITY_V,72,155,48,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZPAGEFAULTS_V,72,125,48,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZPAGEPRIORITY_V,72,188,48,8,SS_ENDELLIPSIS
     LTEXT           "Reads",IDC_STATIC,138,17,21,8
     LTEXT           "Read Bytes",IDC_STATIC,138,27,38,8
     LTEXT           "Writes",IDC_STATIC,138,37,22,8
@@ -1257,6 +1257,12 @@ BEGIN
     PUSHBUTTON      "Details",IDC_DETAILS,137,143,50,14
     LTEXT           "Peak Handles",IDC_STATIC,138,112,44,8
     RTEXT           "Static",IDC_ZPEAKHANDLES_V,192,112,55,8,SS_ENDELLIPSIS
+    LTEXT           "Private WS",IDC_STATIC,22,147,36,8
+    LTEXT           "Shareable WS",IDC_STATIC,22,157,46,8
+    LTEXT           "Shared WS",IDC_STATIC,22,167,36,8
+    RTEXT           "Static",IDC_ZPRIVATEWS_V,78,147,42,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZSHAREABLEWS_V,78,157,42,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_ZSHAREDWS_V,78,167,42,8,SS_ENDELLIPSIS
 END
 
 IDD_OPTADVANCED DIALOGEX 0, 0, 250, 128
